<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/listFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_featured_play_list_24"
        android:title="@string/menu_home" />
    <item
        android:id="@+id/filterFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_movie_filter_24"
        android:title="@string/menu_filter" />
    <item
        android:id="@+id/myCollectionFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_collections_bookmark_24"
        android:title="@string/menu_myMovies" />

    <item
        android:id="@+id/comingSoonFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_preview_24"
        android:title="@string/coming_soon" />

</menu>


