<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="years"
            type="com.davevarga.tmdbmoviespaging.models.Years" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.FilterFragment">


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/selectRange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/please_select_range"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/minYear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/selectRange">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/minYear_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/min_year"
                android:inputType="phone"
                android:maxLength="4"
                android:text="@{years.minYear ?? @string/minDef}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/maxYear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/minYear">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/maxYear_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/maximum_year"
                android:inputType="phone"
                android:maxLength="4"
                android:text="@{years.maxYear ?? @string/maxDef}"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/genreRecyclerView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/maxYear"
            app:layout_constraintStart_toStartOf="parent"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="88dp"
            android:padding="12dp"
            android:text="@string/ok"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>