<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="movie"
            type="com.davevarga.tmdbmoviespaging.models.Movie" />

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="300dp">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsingToolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:shadowColor="#000000"
                android:shadowDx="1.5"
                android:shadowDy="1.3"
                android:shadowRadius="1.6"
                app:collapsedTitleTextAppearance="@style/Toolbar.CollapsedTitleText"
                app:contentScrim="?attr/colorPrimary"
                app:expandedTitleMarginEnd="10dp"
                app:expandedTitleMarginStart="10dp"
                app:expandedTitleTextAppearance="@style/Toolbar.TitleText"
                app:layout_scrollFlags="exitUntilCollapsed|scroll"
                app:title="@{movie.title}"
                tools:src="@tools:sample/avatars">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolBar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/background_poster"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/background_image"
                        android:scaleType="centerCrop"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:src="@tools:sample/avatars" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#65282DDB" />
                </FrameLayout>

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/release_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:shadowColor="#000000"
                        android:shadowDx="1.5"
                        android:shadowDy="1.3"
                        android:shadowRadius="1.6"
                        android:text="@{movie.releaseDate}"
                        android:textColor="@android:color/white"
                        android:textSize="15dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        tools:text="@tools:sample/date/hhmmss" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_marginLeft="10dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/vote_average"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:shadowColor="#000000"
                            android:shadowDx="1.5"
                            android:shadowDy="1.3"
                            android:shadowRadius="1.6"
                            android:text="@{movie.voteAverage.toString()}"
                            android:textColor="@color/yellow"
                            android:textSize="15dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            tools:text="8.2" />

                        <ImageView
                            android:layout_width="15dp"
                            android:layout_height="15dp"
                            android:layout_marginLeft="3dp"
                            android:src="@drawable/ic_star"
                            android:tint="@color/yellow" />
                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:id="@+id/overviewSign"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_weight="0"
                    android:fontFamily="sans-serif"
                    android:padding="10dp"
                    android:shadowColor="#000000"
                    android:shadowDx="1.5"
                    android:shadowDy="1.3"
                    android:shadowRadius="1.6"
                    android:text="@string/overview"
                    android:textColor="@android:color/white"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/release_date"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:text="Plot" />

                <TextView
                    android:id="@+id/overview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_weight="0"
                    android:fontFamily="sans-serif"
                    android:padding="10dp"
                    android:shadowColor="#000000"
                    android:shadowDx="1.5"
                    android:shadowDy="1.3"
                    android:shadowRadius="1.6"
                    android:text="@{movie.overview}"
                    android:textColor="#9D9BBD"
                    android:textSize="15dp"
                    app:layout_constraintBottom_toTopOf="@+id/release_date"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:text="Overview" />

                <Button
                    android:id="@+id/addToCollection"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_margin="10dp"
                    android:text="@string/save_to_collection"
                    android:textSize="13dp"
                    android:textStyle="bold"
                    android:backgroundTint="@color/colorAccent"
                    app:layout_constraintBottom_toTopOf="@+id/overview"
                    app:layout_constraintStart_toStartOf="parent" />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>